--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "notesapp",
   "private": true,
   "version": "0.0.0",
+"engines": {
+  "node": ">=20"
+}
+
   "type": "module",
   "scripts": {
     "dev": "vite",
